--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,18 @@ configurations {
     }
 }
 
+springBoot {
+    mainClass.set("org.api.bullish.ElectronicStoreApplication")
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.mockito:mockito-core:4.8.0'
-    testImplementation("org.junit.vintage:junit-vintage-engine")
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.google.code.gson:gson:2.10'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
@@ -31,7 +32,10 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation("org.junit.vintage:junit-vintage-engine")
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
